--- a/ExampleClientTest.html
+++ b/ExampleClientTest.html
@@ -17,7 +17,7 @@
 
 		$('#out').append("Соединение установлено.<br>");
 
-		socket.send('{"type":"auth","data":{"login":"Flame","passw":"Ig7j9p8VWmL6zJp7UnS6"}}');
+		socket.send('{"type":"auth","data":{"login":"CatViewer","passw":"CatViewer"}}');
 
 	};
 
